# Discord-Handler-Cpp-Sequelize

./: .env.example  CMakeLists.txt  LICENSE  README.md
src/: bot.cpp  bot.h  config.cpp  config.h  main.cpp
src/commands/prefix/public/: ping.h
src/commands/slash/public/: ping.h
src/core/: cooldown.cpp  cooldown.h  emojis.h  webhooks.cpp  webhooks.h
src/database/: connection.cpp  connection.h
src/events/: guild_create.h  guild_delete.h  interaction_create.h  message_create.h  ready.h
src/handlers/: anticrash.cpp  anticrash.h  commands.cpp  commands.h  logger.cpp  logger.h
src/models/: user.h
